Added the projects section

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#events">Events</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -279,7 +282,7 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Udacity/Andela Android Certified Developer (Intermediate....in View)  2018</li>
+              Udacity/Andela Android Certified Developer (Intermediate)  2018</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               Mobile Web Specialist - Google Certification  2018</li>
@@ -325,6 +328,41 @@
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               Women Technology Makers - 2015......... Introduction to Web Design</li>
+          </ul>
+        </div>
+      </section>
+    
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
+        <div class="my-auto">
+          <h2 class="mb-5">Androids Apps on PlayStore</h2>
+          <ul class="fa-ul mb-0">
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              <a href="https://play.google.com/store/apps/details?id=com.ulogi.tailorpro2015">TailorPro </a>
+              <p>Tailor Pro is a tool designed and developed by Ulogi Technology Ltd. 
+                Tailor Pro is designed to help tailors and fashion designers organize task and optimize performance. 
+                Among other things, this tool keeps records of all sewing tasks in a Tailoring shop. 
+                Tailor Pro is your measurement book plus.</p>
+            </li>
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              <a href="https://play.google.com/store/apps/details?id=com.deltastystematics.app">GetWell</a>
+              <p>GETWELL Discover hospitals and medical services providers in your neighbourhood. 
+                Get instant directions to hospitals of your choice. Book appointments with doctors.
+                 All from the comfort of your home, whenever you need to..</p>
+            </li>
+              <li>
+                <i class="fa-li fa fa-trophy text-warning"></i>
+                <a href="https://play.google.com/store/apps/details?id=com.fulaif.fulaif">Fulaif</a>
+                <p>FULAIF SAFETY ACADEMY is established to organize Safety Enlightenment Campaign with various 
+                  groups to create and increase safety awareness, equip the general public to better handle safety concerns, 
+                  encourage safety practices as well as making safety a priority in all their endevours.</p>
+              </li>
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              <a href="https://play.google.com/store/apps/details?id=com.snapknow.snapknow">SnapKnow</a>
+              <p>Expand your knowledge, by discovering new things using your android device's camera.</p>
+            </li>
           </ul>
         </div>
       </section>
