--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Amanayagbo of DevSquare </h3>
               <div class="subheading mb-3">OlotuSquare</div>
-              <p>At OlotuSquare i was incharge of acception and reviewing software jobs before the Devs starts tow ork on it.. and i also give the timeframe and motive the developers on the job.</p>
+              <p>At OlotuSquare i was incharge of accepting and reviewing software jobs before the Developers starts to work on it.. and i also give the timeframe and motive the developers on the project.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">January 2017 - Febuary 2018</span>
@@ -153,7 +153,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Director External Relations </h3>
               <div class="subheading mb-3">Nesiscom Technologies</div>
-              <p>As the Director of External Relations i create and maintain a positive Image of the compant through media and communications. I also supervise the writting of documents relating to public relations.</p>
+              <p>As the Director of External Relations i maintained the Image of the company positively through media and communications. I also supervise the writting of documents relating to public relations.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">March 2015 - Febuary 2016</span>
