--- a/index.html
+++ b/index.html
@@ -126,6 +126,17 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
           <h2 class="mb-5">Experience</h2>
+          
+           <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Chief Organisation Officer</h3>
+              <div class="subheading mb-3">PrimedSoft Limited</div>
+              <p>At Primedsoft.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">September 2018 - till Date</span>
+            </div>
+          </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
