--- a/index.html
+++ b/index.html
@@ -131,17 +131,14 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Chief Operations Officer</h3>
               <div class="subheading mb-3">PrimedSoft Limited</div>
-              <p>Working together with key participants to compile the budget.
-Spearheading strategies to steer the company’s future in a positive direction.
-Driving the company’s operating capabilities to surpass customer satisfaction and retention, and company goals.
-Controlling company costs, and introducing tactical initiatives to address theft and other losses.
-Monitoring invoices, money handling procedures, accounting and bank processes.
-Preparing timely and accurate financial performance reports.
-Overseeing marketing initiatives and implementing better business practices.
-Delegating responsibilities to ensure staff members grow as capable participants.
-Employing various initiatives to coach employees to optimize their capabilities.
-Completing performance reviews in a prudent manner.
-Assessing and implementing improved processes and new technologies, and collaborating with management regarding the implementation of these improvements.</p>
+              <p>*Working together with key participants to compile the budget.<br/>
+                  *Spearheading strategies to steer the company’s future in a positive direction.<br/>
+                   *Driving the company’s operating capabilities to surpass customer satisfaction and retention, and company goals.<br/>  
+                   *Overseeing marketing initiatives and implementing better business practices.<br/>
+                   *Delegating responsibilities to ensure staff members grow as capable participants.<br/>
+                   *Employing various initiatives to coach employees to optimize their capabilities.
+                   *Completing performance reviews in a prudent manner.
+                   *Assessing and implementing improved processes and new technologies, and collaborating with management regarding the implementation of these improvements.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">September 2018 - till Date</span>
