--- a/index.html
+++ b/index.html
@@ -132,13 +132,21 @@
               <h3 class="mb-0">Chief Operations Officer</h3>
               <div class="subheading mb-3">PrimedSoft Limited</div>
               <p>*Working together with key participants to compile the budget.<br/>
+                <br/>
                   *Spearheading strategies to steer the company’s future in a positive direction.<br/>
+                <br/>
                    *Driving the company’s operating capabilities to surpass customer satisfaction and retention, and company goals.<br/>  
+                <br/>
                    *Overseeing marketing initiatives and implementing better business practices.<br/>
+                <br/>
                    *Delegating responsibilities to ensure staff members grow as capable participants.<br/>
-                   *Employing various initiatives to coach employees to optimize their capabilities.
-                   *Completing performance reviews in a prudent manner.
+                <br/>
+                   *Employing various initiatives to coach employees to optimize their capabilities.<br/>
+                <br/>
+                   *Completing performance reviews in a prudent manner.<br/>
+                <br/>
                    *Assessing and implementing improved processes and new technologies, and collaborating with management regarding the implementation of these improvements.</p>
+              <br/>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">September 2018 - till Date</span>
